* Wed Jul 10 2024 Steven Pritchard <steve@sicura.us> - 6.7.1
- Fix call to `FileUtils.cp` to work on Ruby 3

* Mon Oct 23 2023 Steven Pritchard <steve@sicura.us> - 6.7.0
- [puppetsync] Add EL9 support

* Wed Oct 11 2023 Steven Pritchard <steve@sicura.us> - 6.6.0
- [puppetsync] Updates for Puppet 8
  - These updates may include the following:
    - Update Gemfile
    - Add support for Puppet 8
    - Drop support for Puppet 6
    - Update module dependencies

* Wed Aug 23 2023 Steven Pritchard <steve@sicura.us> - 6.5.0
- Add AlmaLinux 8 support

* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.4.0
- Add RockyLinux 8 support

* Wed Jun 16 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.3.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Fri Dec 18 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.2.1
- Removed EL6 support

* Tue Dec 24 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.2.0-0
- Add EL8 support

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 6.2.0-0
- Drop Puppet 4 support
- Add Puppet 6 support
- Add puppetlabs-stdlib 6 support

* Fri Jan 25 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.1-0
- Moved temporary aggregate CA certs reference files used by
  pki_cert_sync out of the target directory. These temporary
  files were being erroneously processed by the gitlab
  application.

* Fri Jan 25 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.0-0
- pki_cert_sync type now generates an aggregate CA certificates
  with X.509 certificate headers removed, cacerts_no_headers.pem,
  in addition to the existing aggregate CA certificates file,
  cacerts.pem. This new CA certificates file is useful for
  application that cannot handle certificate headers.
- Add a pki_cert_sync option, ``generate_pem_hash_links``, which controls
  whether pki_cert_sync should generate and maintain the PEM file hash
  links in the target directory. Disabling automatic PEM hash link