@@ -68,6 +68,7 @@ describe 'pki_sync' do
     on host, 'cp /root/keydist1/cacerts/*.pem /etc/pki/simp-testing/pki/cacerts/some/subdirectory'
     on host, 'chgrp -R puppet /etc/pki/simp-testing/'
 
+    # rubocop:disable RSpec/RepeatedExample
     context 'default parameters (purge = true)' do
       #
       # Given default params and one cert: expect the cert to be synced, a symlink
@@ -150,6 +151,7 @@ acceptable_exit_codes: [0]
         on host, 'ls -A /etc/pki/simp/cacerts/some/subdirectory', acceptable_exit_codes: [0]
       end
     end
+    # rubocop:enable RSpec/RepeatedExample
 
     #
     # Set purged = false.  If a cert is copied into /etc/pki/simp/cacerts, it
