@@ -163,23 +163,23 @@ describe provider_class do
   # required for source_insync?() and source=(), because the source()
   # method generates internal and external state info needed by them.
   context 'stateful methods via scenarios' do
-    before(:each) do
-      @tmpdir = Dir.mktmpdir
-      @source_dir = File.join(@tmpdir, 'source')
-      FileUtils.mkdir_p(@source_dir)
+    let(:tmpdir) { Dir.mktmpdir }
+    let(:source_dir) { File.join(tmpdir, 'source') }
+    let(:target_dir) { File.join(tmpdir, 'target') }
 
-      @target_dir = File.join(@tmpdir, 'target')
-      FileUtils.mkdir_p(@target_dir)
+    before(:each) do
+      FileUtils.mkdir_p(source_dir)
+      FileUtils.mkdir_p(target_dir)
     end
 
     after(:each) do
-      FileUtils.remove_entry_secure(@tmpdir)
+      FileUtils.remove_entry_secure(tmpdir)
     end
 
     context 'source does not exist' do
       it 'fails when the source dir does not exist' do
         resource = Puppet::Type.type(:pki_cert_sync).new({
-                                                           name: @target_dir,
+                                                           name: target_dir,
           source: '/does/not/exist/source',
           provider: 'redhat'
                                                          })
@@ -193,11 +193,11 @@ describe provider_class do
     context 'target is out of sync' do
       context 'target does not exist' do
         it 'creates and populate the target dir' do
-          populate_source_dir(@source_dir, cert_info)
+          populate_source_dir(source_dir, cert_info)
 
           resource = Puppet::Type.type(:pki_cert_sync).new({
-                                                             name: @target_dir,
-            source: @source_dir,
+                                                             name: target_dir,
+            source: source_dir,
             provider: 'redhat'
                                                            })
           provider = resource.provider
@@ -212,20 +212,20 @@ describe provider_class do
           }
           expect(its).to eq expected_its
 
-          expect(provider.source_insync?(its, @target_dir)).to eq false
-          provider.source = @target_dir
-          expect(provider.source_insync?(its, @target_dir)).to eq true
+          expect(provider.source_insync?(its, target_dir)).to eq false
+          provider.source = target_dir
+          expect(provider.source_insync?(its, target_dir)).to eq true
 
-          validate_cert_dir(@target_dir, cert_info, cacerts_file, cacerts_no_hdrs_file)
+          validate_cert_dir(target_dir, cert_info, cacerts_file, cacerts_no_hdrs_file)
         end
       end
 
       context 'target does not exist and link generation is disabled' do
         it 'creates and populate the target dir without hash links' do
-          populate_source_dir(@source_dir, cert_info)
+          populate_source_dir(source_dir, cert_info)
           resource = Puppet::Type.type(:pki_cert_sync).new({
-                                                             name: @target_dir,
-            source: @source_dir,
+                                                             name: target_dir,
+            source: source_dir,
             provider: 'redhat',
             generate_pem_hash_links: false
                                                            })
@@ -241,22 +241,22 @@ describe provider_class do
           }
           expect(its).to eq expected_its
 
-          expect(provider.source_insync?(its, @target_dir)).to eq false
-          provider.source = @target_dir
-          expect(provider.source_insync?(its, @target_dir)).to eq true
+          expect(provider.source_insync?(its, target_dir)).to eq false
+          provider.source = target_dir
+          expect(provider.source_insync?(its, target_dir)).to eq true
 
-          validate_cert_dir(@target_dir, cert_info, cacerts_file, cacerts_no_hdrs_file, :absent)
+          validate_cert_dir(target_dir, cert_info, cacerts_file, cacerts_no_hdrs_file, :absent)
         end
       end
 
       context 'target is missing a directory' do
         it 'restores missing directory in the target dir' do
           # set up a incomplete target directory
-          populate_target_dir(@source_dir, @target_dir, cert_info)
-          FileUtils.rm_r(File.join(@target_dir, 'd3a'))
+          populate_target_dir(source_dir, target_dir, cert_info)
+          FileUtils.rm_r(File.join(target_dir, 'd3a'))
 
           # exercise default provider and verify results
-          verify_provider(@source_dir, @target_dir, cert_info, cacerts_file, cacerts_no_hdrs_file)
+          verify_provider(source_dir, target_dir, cert_info, cacerts_file, cacerts_no_hdrs_file)
         end
       end
 
@@ -264,11 +264,11 @@ describe provider_class do
         ['cert1.pem', 'cacerts.pem', 'cacerts_no_headers.pem'].each do |cert_file|
           it "restores missing #{cert_file} in target dir" do
             # set up a incomplete target directory
-            populate_target_dir(@source_dir, @target_dir, cert_info)
-            FileUtils.rm(File.join(@target_dir, cert_file))
+            populate_target_dir(source_dir, target_dir, cert_info)
+            FileUtils.rm(File.join(target_dir, cert_file))
 
             # exercise default provider and verify results
-            verify_provider(@source_dir, @target_dir, cert_info, cacerts_file, cacerts_no_hdrs_file)
+            verify_provider(source_dir, target_dir, cert_info, cacerts_file, cacerts_no_hdrs_file)
           end
         end
       end
@@ -277,11 +277,11 @@ describe provider_class do
         [:cert1, :cert2, :cert3].each do |cert|
           it "restores missing link for #{cert} in target dir" do
             # set up a incomplete target directory
-            populate_target_dir(@source_dir, @target_dir, cert_info)
-            FileUtils.rm(File.join(@target_dir, "#{cert_subj_hash[cert]}.0"))
+            populate_target_dir(source_dir, target_dir, cert_info)
+            FileUtils.rm(File.join(target_dir, "#{cert_subj_hash[cert]}.0"))
 
             # exercise default provider and verify results
-            verify_provider(@source_dir, @target_dir, cert_info, cacerts_file, cacerts_no_hdrs_file)
+            verify_provider(source_dir, target_dir, cert_info, cacerts_file, cacerts_no_hdrs_file)
           end
         end
       end
@@ -290,11 +290,11 @@ describe provider_class do
         ['cert1.pem', 'cacerts.pem', 'cacerts_no_headers.pem'].each do |cert_file|
           it "replaces #{cert_file} in target dir" do
             # set up a incomplete target directory
-            populate_target_dir(@source_dir, @target_dir, cert_info)
-            FileUtils.cp(cert3_no_hdrs_file, File.join(@target_dir, cert_file))
+            populate_target_dir(source_dir, target_dir, cert_info)
+            FileUtils.cp(cert3_no_hdrs_file, File.join(target_dir, cert_file))
 
             # exercise default provider and verify results
-            verify_provider(@source_dir, @target_dir, cert_info, cacerts_file, cacerts_no_hdrs_file)
+            verify_provider(source_dir, target_dir, cert_info, cacerts_file, cacerts_no_hdrs_file)
           end
         end
       end
@@ -302,13 +302,13 @@ describe provider_class do
       context 'target has an incorrect link to a certificate' do
         it 'replaces the link in target dir' do
           # set up a target directory with one bad cert link
-          populate_target_dir(@source_dir, @target_dir, cert_info)
-          FileUtils.rm(File.join(@target_dir, "#{cert_subj_hash[:cert1]}.0"))
-          incorrect_link = File.join(@target_dir, "#{cert_subj_hash[:cert1]}.99")
-          FileUtils.ln_sf(File.join(@target_dir, File.basename(cert1_file)), incorrect_link)
+          populate_target_dir(source_dir, target_dir, cert_info)
+          FileUtils.rm(File.join(target_dir, "#{cert_subj_hash[:cert1]}.0"))
+          incorrect_link = File.join(target_dir, "#{cert_subj_hash[:cert1]}.99")
+          FileUtils.ln_sf(File.join(target_dir, File.basename(cert1_file)), incorrect_link)
 
           # exercise default provider and verify results
-          verify_provider(@source_dir, @target_dir, cert_info, cacerts_file, cacerts_no_hdrs_file)
+          verify_provider(source_dir, target_dir, cert_info, cacerts_file, cacerts_no_hdrs_file)
           expect(File.exist?(incorrect_link)). to be false
         end
       end
@@ -316,13 +316,13 @@ describe provider_class do
       context 'target has an extra directory and purge is enabled' do
         it 'removes extra directory in the target dir' do
           # set up a target directory with extra dir
-          populate_target_dir(@source_dir, @target_dir, cert_info)
-          extra_dir = File.join(@target_dir, 'extra')
+          populate_target_dir(source_dir, target_dir, cert_info)
+          extra_dir = File.join(target_dir, 'extra')
           FileUtils.mkdir(extra_dir)
           FileUtils.cp(cert3_no_hdrs_file, extra_dir)
 
           # exercise default provider and verify results
-          verify_provider(@source_dir, @target_dir, cert_info, cacerts_file, cacerts_no_hdrs_file)
+          verify_provider(source_dir, target_dir, cert_info, cacerts_file, cacerts_no_hdrs_file)
           expect(Dir.exist?(extra_dir)).to be false
         end
       end
@@ -330,12 +330,12 @@ describe provider_class do
       context 'target has an extra certificate file and purge is enabled' do
         it 'removes extra cert file in the target dir' do
           # set up a target directory with extra cert
-          populate_target_dir(@source_dir, @target_dir, cert_info)
-          extra_cert = File.join(@target_dir, File.basename(cert1_no_hdrs_file))
-          FileUtils.cp(cert1_no_hdrs_file, @target_dir)
+          populate_target_dir(source_dir, target_dir, cert_info)
+          extra_cert = File.join(target_dir, File.basename(cert1_no_hdrs_file))
+          FileUtils.cp(cert1_no_hdrs_file, target_dir)
 
           # exercise default provider and verify results
-          verify_provider(@source_dir, @target_dir, cert_info, cacerts_file, cacerts_no_hdrs_file)
+          verify_provider(source_dir, target_dir, cert_info, cacerts_file, cacerts_no_hdrs_file)
           expect(File.exist?(extra_cert)).to be false
         end
       end
@@ -345,58 +345,58 @@ describe provider_class do
       context 'target matches source' do
         it 'reports it is in sync' do
           # set up a target directory
-          populate_target_dir(@source_dir, @target_dir, cert_info)
+          populate_target_dir(source_dir, target_dir, cert_info)
 
           # exercise provider
           resource = Puppet::Type.type(:pki_cert_sync).new({
-                                                             name: @target_dir,
-            source: @source_dir,
+                                                             name: target_dir,
+            source: source_dir,
             provider: 'redhat'
                                                            })
           provider = resource.provider
           its = provider.source
-          expect(provider.source_insync?(its, @target_dir)).to eq true
+          expect(provider.source_insync?(its, target_dir)).to eq true
         end
       end
 
       context 'target has an extra directory and purge is disabled' do
         it 'reports it is in sync' do
           # set up a target directory with extra dir
-          populate_target_dir(@source_dir, @target_dir, cert_info)
-          extra_dir = File.join(@target_dir, 'extra')
+          populate_target_dir(source_dir, target_dir, cert_info)
+          extra_dir = File.join(target_dir, 'extra')
           FileUtils.mkdir(extra_dir)
           FileUtils.cp(cert3_no_hdrs_file, extra_dir)
 
           # exercise provider
           resource = Puppet::Type.type(:pki_cert_sync).new({
-                                                             name: @target_dir,
-            source: @source_dir,
+                                                             name: target_dir,
+            source: source_dir,
             provider: 'redhat',
             purge: false
                                                            })
           provider = resource.provider
           its = provider.source
-          expect(provider.source_insync?(its, @target_dir)).to eq true
+          expect(provider.source_insync?(its, target_dir)).to eq true
         end
       end
 
       context 'target has an extra certificate file and purge is disabled' do
         it 'reports it is in sync' do
           # set up a target directory with extra cert
-          populate_target_dir(@source_dir, @target_dir, cert_info)
-          File.join(@target_dir, File.basename(cert1_no_hdrs_file))
-          FileUtils.cp(cert1_no_hdrs_file, @target_dir)
+          populate_target_dir(source_dir, target_dir, cert_info)
+          File.join(target_dir, File.basename(cert1_no_hdrs_file))
+          FileUtils.cp(cert1_no_hdrs_file, target_dir)
 
           # exercise provider
           resource = Puppet::Type.type(:pki_cert_sync).new({
-                                                             name: @target_dir,
-            source: @source_dir,
+                                                             name: target_dir,
+            source: source_dir,
             provider: 'redhat',
             purge: false
                                                            })
           provider = resource.provider
           its = provider.source
-          expect(provider.source_insync?(its, @target_dir)).to eq true
+          expect(provider.source_insync?(its, target_dir)).to eq true
         end
       end
 
@@ -404,21 +404,21 @@ describe provider_class do
         it 'reports it is in sync' do
           # set up a target directory which has links, but with one of the
           # links different than pki_cert_sync would generate
-          populate_target_dir(@source_dir, @target_dir, cert_info)
-          FileUtils.rm(File.join(@target_dir, "#{cert_subj_hash[:cert1]}.0"))
-          different_link = File.join(@target_dir, "#{cert_subj_hash[:cert1]}.99")
-          FileUtils.ln_sf(File.join(@target_dir, File.basename(cert1_file)), different_link)
+          populate_target_dir(source_dir, target_dir, cert_info)
+          FileUtils.rm(File.join(target_dir, "#{cert_subj_hash[:cert1]}.0"))
+          different_link = File.join(target_dir, "#{cert_subj_hash[:cert1]}.99")
+          FileUtils.ln_sf(File.join(target_dir, File.basename(cert1_file)), different_link)
 
           # exercise provider
           resource = Puppet::Type.type(:pki_cert_sync).new({
-                                                             name: @target_dir,
-            source: @source_dir,
+                                                             name: target_dir,
+            source: source_dir,
             provider: 'redhat',
             generate_pem_hash_links: false
                                                            })
           provider = resource.provider
           its = provider.source
-          expect(provider.source_insync?(its, @target_dir)).to eq true
+          expect(provider.source_insync?(its, target_dir)).to eq true
         end
       end
     end
@@ -427,23 +427,23 @@ describe provider_class do
       context 'source contains no valid certificate files' do
         it 'does not generate aggregate CA certs files' do
           # set up a target directory to already have CA certs files
-          target_cacerts = File.join(@target_dir, 'cacerts.pem')
+          target_cacerts = File.join(target_dir, 'cacerts.pem')
           FileUtils.cp(cacerts_file, target_cacerts)
-          target_cacerts_no_hdrs = File.join(@target_dir, 'cacerts_no_headers.pem')
+          target_cacerts_no_hdrs = File.join(target_dir, 'cacerts_no_headers.pem')
           FileUtils.cp(cacerts_no_hdrs_file, target_cacerts_no_hdrs)
 
           resource = Puppet::Type.type(:pki_cert_sync).new({
-                                                             name: @target_dir,
-            source: @source_dir,
+                                                             name: target_dir,
+            source: source_dir,
             provider: 'redhat'
                                                            })
           provider = resource.provider
 
           # exercise provider
           its = provider.source
-          expect(provider.source_insync?(its, @target_dir)).to eq false
-          provider.source = @target_dir
-          expect(provider.source_insync?(its, @target_dir)).to eq true
+          expect(provider.source_insync?(its, target_dir)).to eq false
+          provider.source = target_dir
+          expect(provider.source_insync?(its, target_dir)).to eq true
 
           expect(File.exist?(target_cacerts)).to be false
           expect(File.exist?(target_cacerts_no_hdrs)).to be false
@@ -454,28 +454,28 @@ describe provider_class do
         it 'does not copy to target' do
           # set up a source directory with extra files:
           #   1 non-cert file and 1 malformed cert file
-          populate_source_dir(@source_dir, cert_info)
-          File.open(File.join(@source_dir, 'README'), 'w') do |file|
+          populate_source_dir(source_dir, cert_info)
+          File.open(File.join(source_dir, 'README'), 'w') do |file|
             file.puts 'This is not a cert'
           end
 
-          File.open(File.join(@source_dir, 'malformed.pem'), 'w') do |file|
+          File.open(File.join(source_dir, 'malformed.pem'), 'w') do |file|
             # strip off last 3 lines of a valid cert
             invalid_cert = IO.readlines(cert1_file).pop(3).join("\n")
             file.puts invalid_cert
           end
 
           resource = Puppet::Type.type(:pki_cert_sync).new({
-                                                             name: @target_dir,
-            source: @source_dir,
+                                                             name: target_dir,
+            source: source_dir,
             provider: 'redhat'
                                                            })
           resource.provider
 
           # exercise provider
-          verify_provider(@source_dir, @target_dir, cert_info, cacerts_file, cacerts_no_hdrs_file)
-          expect(File.exist?(File.join(@target_dir, 'README'))).to be false
-          expect(File.exist?(File.join(@target_dir, 'malformed.pem'))).to be false
+          verify_provider(source_dir, target_dir, cert_info, cacerts_file, cacerts_no_hdrs_file)
+          expect(File.exist?(File.join(target_dir, 'README'))).to be false
+          expect(File.exist?(File.join(target_dir, 'malformed.pem'))).to be false
         end
       end
 
@@ -487,31 +487,31 @@ describe provider_class do
             [ cert1_file,         'dir1', cert_subj_hash[:cert1]],
             [ cert1_no_hdrs_file, 'dir1', cert_subj_hash[:cert1]],
           ]
-          populate_source_dir(@source_dir, dup_cert_info)
+          populate_source_dir(source_dir, dup_cert_info)
 
           # Create 3 more files with the same cert hash, but named <hash>.<num>:
           # - One at beginning of num range (0)
           # - One in the middle of the num range (3)
           # - One outside of num range (9)
-          src = File.join(@source_dir, File.basename(cert1_file))
+          src = File.join(source_dir, File.basename(cert1_file))
           cert_hash = cert_subj_hash[:cert1]
-          FileUtils.cp(src, File.join(@source_dir, "#{cert_hash}.0"))
-          FileUtils.cp(src, File.join(@source_dir, "#{cert_hash}.3"))
-          FileUtils.cp(src, File.join(@source_dir, "#{cert_hash}.9"))
+          FileUtils.cp(src, File.join(source_dir, "#{cert_hash}.0"))
+          FileUtils.cp(src, File.join(source_dir, "#{cert_hash}.3"))
+          FileUtils.cp(src, File.join(source_dir, "#{cert_hash}.9"))
           resource = Puppet::Type.type(:pki_cert_sync).new({
-                                                             name: @target_dir,
-            source: @source_dir,
+                                                             name: target_dir,
+            source: source_dir,
             provider: 'redhat'
                                                            })
           provider = resource.provider
 
           # exercise provider
           its = provider.source
-          expect(provider.source_insync?(its, @target_dir)).to eq false
-          provider.source = @target_dir
-          expect(provider.source_insync?(its, @target_dir)).to eq true
+          expect(provider.source_insync?(its, target_dir)).to eq false
+          provider.source = target_dir
+          expect(provider.source_insync?(its, target_dir)).to eq true
 
-          Dir.chdir(@target_dir) do
+          Dir.chdir(target_dir) do
             expected = [
               [ "#{cert_hash}.0",                                    nil ],
               [ File.basename(cert1_file),                           "#{cert_hash}.1"],
@@ -534,27 +534,27 @@ describe provider_class do
 
       context 'input files change between source() & source_insync?()' do
         it 'handles missing source cert file gracefully' do
-          populate_source_dir(@source_dir, cert_info)
+          populate_source_dir(source_dir, cert_info)
           resource = Puppet::Type.type(:pki_cert_sync).new({
-                                                             name: @target_dir,
-            source: @source_dir,
+                                                             name: target_dir,
+            source: source_dir,
             provider: 'redhat'
                                                            })
           provider = resource.provider
 
           its = provider.source
-          FileUtils.rm(File.join(@source_dir, File.basename(cert1_file)))
+          FileUtils.rm(File.join(source_dir, File.basename(cert1_file)))
 
           # really checking that this does not throw an exception
-          expect(provider.source_insync?(its, @target_dir)).to eq false
+          expect(provider.source_insync?(its, target_dir)).to eq false
         end
 
         ['cacerts.pem', 'cacerts_no_headers.pem'].each do |cacert_file|
           it "handles missing reference #{cacert_file} gracefully" do
-            populate_source_dir(@source_dir, cert_info)
+            populate_source_dir(source_dir, cert_info)
             resource = Puppet::Type.type(:pki_cert_sync).new({
-                                                               name: @target_dir,
-              source: @source_dir,
+                                                               name: target_dir,
+              source: source_dir,
               provider: 'redhat'
                                                              })
             provider = resource.provider
@@ -563,27 +563,27 @@ describe provider_class do
             FileUtils.rm(provider.ref_file(cacert_file))
 
             # really checking that this does not throw an exception
-            expect(provider.source_insync?(its, @target_dir)).to eq false
+            expect(provider.source_insync?(its, target_dir)).to eq false
           end
         end
       end
 
       context 'input files change between source() & source=()' do
         it 'handles missing source cert file gracefully' do
-          populate_source_dir(@source_dir, cert_info)
+          populate_source_dir(source_dir, cert_info)
           resource = Puppet::Type.type(:pki_cert_sync).new({
-                                                             name: @target_dir,
-            source: @source_dir,
+                                                             name: target_dir,
+            source: source_dir,
             provider: 'redhat'
                                                            })
           provider = resource.provider
 
           its = provider.source
-          expect(provider.source_insync?(its, @target_dir)).to eq false
-          FileUtils.rm(File.join(@source_dir, File.basename(cert1_file)))
+          expect(provider.source_insync?(its, target_dir)).to eq false
+          FileUtils.rm(File.join(source_dir, File.basename(cert1_file)))
 
           # really checking that this does not throw an exception
-          provider.source = @target_dir
+          provider.source = target_dir
         end
       end
     end
